kdebindings (4:4.4.5-2) UNRELEASED; urgency=low

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ Pino Toscano ]
  * Fix typo in description of libsmokekparts3. (Closes: #589904)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 02 Aug 2010 23:37:14 +0200

kdebindings (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
     - Fix ruby marshalling. Closes: #586672
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Fix libsmokekfile description. Closes: 586440
  * Fix descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 01:30:43 +0200

kdebindings (4:4.4.4-2) unstable; urgency=low

  * Added missing dependency on libqt4-ruby1.8. (Closes: #584651)
  * Fixed description of libsmokektexteditor3. (Closes: #585686)

 -- Michael Meskes <meskes@debian.org>  Tue, 15 Jun 2010 19:02:36 +0200

kdebindings (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Fix typo in description of libplasma2.0-cil. (Closes: #581404)

  [ Sune Vuorela ]
  * Fix qt-dotnet config file. Thanks Dave Page. (Closes: 583112)
  * Update email address.

  [ Modestas Vainius ]
  * Bump pkg-kde-tools build dependency to (>= 0.9.2) for HTML_INSTALL_DIR
    switch, 3.0 (quilt) source format support and
    DEB_KDE_LINK_WITH_NO_UNDEFINED flag.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).
  * Remove debian/README.source. Patch support is part of source format
    now.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.4.
  * Use default KDE 4 variables from variables.mk for building.
  * Replace usr/share/doc/kde4 references with usr/share/doc/kde.
  * Unhook quilt.make from debian/rules.
  * Drop support_armel_in_generator.diff patch, merged upstream.
  * Bump attica build dependency to 0.1.4 (just in case).
