@@ -1,6 +1,6 @@
 --- a/python/pykde4/CMakeLists.txt
 +++ b/python/pykde4/CMakeLists.txt
-@@ -249,10 +249,15 @@ PYTHON_INSTALL(${CMAKE_CURRENT_BINARY_DI
+@@ -249,15 +249,20 @@ PYTHON_INSTALL(${CMAKE_CURRENT_BINARY_DI
  
  # Install the .sip files for anyone that wants to build bindings on top of PyKDE4.
  # (Don't forget the / at the end of sip/.)
@@ -8,15 +8,22 @@
 -    PATTERN "*~" EXCLUDE    # This sucks, why can't I just whitelist what I _do_ want?
 -    PATTERN ".svn" EXCLUDE
 -    PATTERN "*.in" EXCLUDE)
-+IF(NOT DONT_INSTALL_DATA_FILES)
++IF(DEFAULT_PYTHON_VERSION)
 +    INSTALL(DIRECTORY sip/ DESTINATION ${SIP_DEFAULT_SIP_DIR}/PyKDE4
 +        PATTERN "*~" EXCLUDE    # This sucks, why can't I just whitelist what I _do_ want?
 +        PATTERN ".svn" EXCLUDE
 +        PATTERN "*.in" EXCLUDE)
 +   MESSAGE("Installing sip files in this build pass")
-+ELSE(NOT DONT_INSTALL_DATA_FILES)
++ELSE(DEFAULT_PYTHON_VERSION)
 +   MESSAGE("Not installing sip files in this build pass")
-+ENDIF(NOT DONT_INSTALL_DATA_FILES)
++ENDIF(NOT DEFAULT_PYTHON_VERSION)
  
  ADD_SUBDIRECTORY(tools)
  #ADD_SUBDIRECTORY(docs)
+ ADD_SUBDIRECTORY(examples)
+-IF (NOT PYTHON_3)
++IF (NOT PYTHON_3 OR NOT DEFAULT_PYTHON_VERSION)
+     ADD_SUBDIRECTORY(kpythonpluginfactory)
+-ENDIF (NOT PYTHON_3)
++ENDIF (NOT PYTHON_3 OR NOT DEFAULT_PYTHON_VERSION)
+ #ADD_SUBDIRECTORY(pykdedocs)
